# best_pc_builds

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ruff.yml
src/apps/best_pc_builds/: admin.py  api.py  asgi.py  mixins.py  wsgi.py
src/apps/components/: admin.py  api.py  apps.py  mixins.py  models.py  schemas.py
src/apps/components/migrations/: 0001_initial.py
src/apps/users/: admin.py  models.py
src/apps/users/migrations/: 0001_initial.py
src/config/: settings.py
src/config/components/: auth.py  bolt.py  database.py
