[project]
name = "best-pc-builds"
version = "0.1.0"
description = "Апи приложения «Лучшие сборки компьютеров»"
authors = ["i.lipatnikov <la1422@rambler.ru>"]
readme = "README.md"

requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-bolt>=0.7.0",
    "django-environ>=0.13.0",
    "django-split-settings>=1.3.2",
    "psycopg>=3.3.3",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
]

[tool.ruff]
target-version = "py314"
line-length = 129
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
