[project]
name = "best-pc-builds"
version = "0.1.0"
description = "Апи приложения «Лучшие сборки компьютеров»"
authors = ["i.lipatnikov <la1422@rambler.ru>"]
readme = "README.md"

requires-python = ">=3.14"
dependencies = [
    "black>=26.5.1",
    "django>=6.0.5",
    "django-bolt>=0.8.0",
    "django-environ>=0.13.0",
    "django-split-settings>=1.3.2",
    "psycopg>=3.3.4",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.14",
]

[tool.ruff]
target-version = "py314"
line-length = 129
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
